fix: shop avatar creation

--- a/account/templates/signature.html
+++ b/account/templates/signature.html
@@ -26,7 +26,7 @@
                style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">https://qaryb.com</a>
         </div>
         <div style="display: flex; flex-direction: row; align-items: center;">
-            <img src="http://127.0.0.1:8000/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
+            <img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
             <span style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
             <span style="margin-left: 10px;margin-right: 10px">•</span>
             <span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">Mahaj Ryad Center B7 - Rabat</span>
@@ -34,13 +34,13 @@
         <div style="display: flex;flex-direction: row; align-items: center; font-size: 13px;font-weight: 400;line-height: 31px;">
             <a href="https://instagram.com/imly.ma"
                style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;margin-right: 10px;">
-                <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                      height="20" style="margin-right: 10px">
                 imly.ma
             </a>
             <a href="https://instagram.com/qaryb.ma"
                style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;">
-                <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                      height="20" style="margin-right: 10px">
                 qaryb.ma
             </a>
@@ -49,7 +49,7 @@
     <div style="margin-top: 60px;"></div>
     <section style="display: flex; flex-direction: row;">
         <div>
-            <img src="http://127.0.0.1:8000/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"
+            <img src="https://api.qaryb.com/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"
                  style="width: 68px;height: 68px;">
         </div>
         <div style="margin-left: 30px;">
@@ -69,7 +69,7 @@
                    style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">https://qaryb.com</a>
             </div>
             <div style="display: flex; flex-direction: row; align-items: center;">
-                <img src="http://127.0.0.1:8000/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
+                <img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
                 <span style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
                 <span style="margin-left: 10px;margin-right: 10px">•</span>
                 <span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">Mahaj Ryad Center B7 - Rabat</span>
@@ -77,13 +77,13 @@
             <div style="display: flex;flex-direction: row; align-items: center; font-size: 13px;font-weight: 400;line-height: 31px;">
                 <a href="https://instagram.com/imly.ma"
                    style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;margin-right: 10px;">
-                    <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                    <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                          height="20" style="margin-right: 10px">
                     imly.ma
                 </a>
                 <a href="https://instagram.com/qaryb.ma"
                    style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;">
-                    <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                    <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                          height="20" style="margin-right: 10px">
                     qaryb.ma
                 </a>
@@ -93,7 +93,7 @@
     <div style="margin-top: 60px;"></div>
     <section style="display: flex; flex-direction: row;">
         <div>
-            <img src="http://127.0.0.1:8000/static/mail/yousra-frirah.png" alt="Yousra FRIRAH"
+            <img src="https://api.qaryb.com/static/mail/yousra-frirah.png" alt="Yousra FRIRAH"
                  style="width: 68px;height: 68px;">
         </div>
         <div style="margin-left: 30px;">
@@ -113,7 +113,7 @@
                    style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">https://qaryb.com</a>
             </div>
             <div style="display: flex; flex-direction: row; align-items: center;">
-                <img src="http://127.0.0.1:8000/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
+                <img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
                 <span style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
                 <span style="margin-left: 10px;margin-right: 10px">•</span>
                 <span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">Mahaj Ryad Center B7 - Rabat</span>
@@ -121,13 +121,13 @@
             <div style="display: flex;flex-direction: row; align-items: center; font-size: 13px;font-weight: 400;line-height: 31px;">
                 <a href="https://instagram.com/imly.ma"
                    style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;margin-right: 10px;">
-                    <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                    <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                          height="20" style="margin-right: 10px">
                     imly.ma
                 </a>
                 <a href="https://instagram.com/qaryb.ma"
                    style="display: flex; flex-direction: row; align-items: center;color: #0D070B; text-decoration: none;">
-                    <img src="http://127.0.0.1:8000/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
+                    <img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page" width="20"
                          height="20" style="margin-right: 10px">
                     qaryb.ma
                 </a>
