fix: email templates

--- a/account/templates/password_reset.html
+++ b/account/templates/password_reset.html
@@ -138,7 +138,7 @@
                                                         <tr>
                                                             <td style="padding-right:20px;padding-top:30px"
                                                                 align="left">
-                                                                <img src="http://127.0.0.1:8000/static/mail/qaryb-logo.png"
+                                                                <img src="https://api.qaryb.com/static/mail/qaryb-logo.png"
                                                                      alt="Qaryb Logo"
                                                                      style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
                                                                      width="92" height="24"></td>
@@ -210,8 +210,7 @@
                                                                         style="display:inline-block;width:auto;">
                                                                       <span class="es-button" target="_blank"
                                                                             style="border-color: #d9d9d9;padding:10px;mso-style-priority:100 !important;font-weight: 700;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:20px;border-style:solid;border-width:1px;display:inline-block;border-radius:10px;font-family:Arial, 'helvetica neue', Helvetica, verdana, sans-serif;font-style:normal;line-height:23px;width:auto;text-align:left;color: #0D070B;letter-spacing: -0.01em;">
-                                                                          1234
-                                                                          <!-- {{ code }} -->
+                                                                          {{ code }}
                                                                       </span>
                                                                 </span>
                                                             </td>
@@ -269,7 +268,7 @@
                                                                     <tr>
                                                                         <td width="54" height="14">
                                                                             <img
-                                                                                    src="http://127.0.0.1:8000/static/mail/qaryb-logo.png"
+                                                                                    src="https://api.qaryb.com/static/mail/qaryb-logo.png"
                                                                                     alt="Qaryb Logo"
                                                                                     style="border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-top: 5px;padding-right: 10px"
                                                                                     width="54" height="14">
@@ -292,14 +291,14 @@
                                                             <td>
                                                                 <a href="#">
                                                                     <img
-                                                                            src="http://127.0.0.1:8000/static/mail/facebook-icon.png"
+                                                                            src="https://api.qaryb.com/static/mail/facebook-icon.png"
                                                                             alt="Facebook page"
                                                                             style="border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-top: 5px;padding-right: 5px"
                                                                             width="20" height="20">
                                                                 </a>
                                                                 <a href="#">
                                                                     <img
-                                                                            src="http://127.0.0.1:8000/static/mail/instagram-icon.png"
+                                                                            src="https://api.qaryb.com/static/mail/instagram-icon.png"
                                                                             alt="Instagram page"
                                                                             style="border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-top: 5px;"
                                                                             width="20" height="20">
