cart - order - fast forward

--- a/account/templates/signature.html
+++ b/account/templates/signature.html
@@ -35,15 +35,15 @@
 						<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">
 							<tr style="padding: 0px">
 								<td style="padding: 0px">
-									<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">06 62 19 06 60</span>
+									<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0662190660</span>
 								</td>
-								<td style="padding: 0px">
-									<span style="margin-left: 5px;margin-right: 5px">•</span>
-								</td>
-								<td style="padding: 0px">
-									<a href="mailto:n.hilale@qaryb.com"
-									   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">n.hilale@qaryb.com</a>
-								</td>
+<!--								<td style="padding: 0px">-->
+<!--									<span style="margin-left: 5px;margin-right: 5px">•</span>-->
+<!--								</td>-->
+<!--								<td style="padding: 0px">-->
+<!--									<a href="mailto:n.hilale@qaryb.com"-->
+<!--									   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">n.hilale@qaryb.com</a>-->
+<!--								</td>-->
 								<td style="padding: 0px">
 									<span style="margin-left: 5px;margin-right: 5px">•</span>
 								</td>
@@ -62,9 +62,9 @@
 								<td style="padding: 0px">
 									<img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54" height="14">
 								</td>
-								<td style="padding: 0px">
-									<span style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
-								</td>
+<!--								<td style="padding: 0px">-->
+<!--									<span style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>-->
+<!--								</td>-->
 								<td style="padding: 0px">
 									<span style="margin-left: 10px;margin-right: 10px">•</span>
 								</td>
@@ -123,12 +123,12 @@
 		<td>
 			<table style="display:inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 				<tr>
+<!--					<td>-->
+<!--						<img src="https://api.qaryb.com/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"-->
+<!--						     style="width: 68px;height: 68px;">-->
+<!--					</td>-->
 					<td>
-						<img src="https://api.qaryb.com/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"
-						     style="width: 68px;height: 68px;">
-					</td>
-					<td>
-						<div style="margin-left: 30px;">
+						<div>
 							<h1 style="color: #0D070B;font-size: 16px;line-height: 10px;font-weight: 700;padding: 0;margin: 0;">
 								Ichrak ELMISSAOUI
 							</h1>
@@ -141,15 +141,15 @@
 										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">
 											<tr style="padding: 0px">
 												<td style="padding: 0px">
-													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">06 62 19 06 60</span>
+													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0708178709</span>
 												</td>
-												<td style="padding: 0px">
-													<span style="margin-left: 5px;margin-right: 5px">•</span>
-												</td>
-												<td style="padding: 0px">
-													<a href="mailto:ichrak@qaryb.com"
-													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">ichrak@qaryb.com</a>
-												</td>
+<!--												<td style="padding: 0px">-->
+<!--													<span style="margin-left: 5px;margin-right: 5px">•</span>-->
+<!--												</td>-->
+<!--												<td style="padding: 0px">-->
+<!--													<a href="mailto:ichrak@qaryb.com"-->
+<!--													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">ichrak@qaryb.com</a>-->
+<!--												</td>-->
 												<td style="padding: 0px">
 													<span style="margin-left: 5px;margin-right: 5px">•</span>
 												</td>
@@ -169,10 +169,10 @@
 													<img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54"
 													     height="14">
 												</td>
-												<td style="padding: 0px">
-													<span
-														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
-												</td>
+<!--												<td style="padding: 0px">-->
+<!--													<span-->
+<!--														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>-->
+<!--												</td>-->
 												<td style="padding: 0px">
 													<span style="margin-left: 10px;margin-right: 10px">•</span>
 												</td>
@@ -235,12 +235,12 @@
 		<td>
 			<table style="display:inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 				<tr>
+<!--					<td>-->
+<!--						<img src="https://api.qaryb.com/static/mail/yousra-frirah.png" alt="Yousra FRIRAH"-->
+<!--						     style="width: 68px;height: 68px;">-->
+<!--					</td>-->
 					<td>
-						<img src="https://api.qaryb.com/static/mail/yousra-frirah.png" alt="Yousra FRIRAH"
-						     style="width: 68px;height: 68px;">
-					</td>
-					<td>
-						<div style="margin-left: 30px;">
+						<div>
 							<h1 style="color: #0D070B;font-size: 16px;line-height: 10px;font-weight: 700;padding: 0;margin: 0;">
 								Yousra FRIRAH
 							</h1>
@@ -253,15 +253,15 @@
 										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">
 											<tr style="padding: 0px">
 												<td style="padding: 0px">
-													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">06 62 19 06 60</span>
+													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0708180257</span>
 												</td>
-												<td style="padding: 0px">
-													<span style="margin-left: 5px;margin-right: 5px">•</span>
-												</td>
-												<td style="padding: 0px">
-													<a href="mailto:yousra@qaryb.com"
-													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">yousra@qaryb.com</a>
-												</td>
+<!--												<td style="padding: 0px">-->
+<!--													<span style="margin-left: 5px;margin-right: 5px">•</span>-->
+<!--												</td>-->
+<!--												<td style="padding: 0px">-->
+<!--													<a href="mailto:yousra@qaryb.com"-->
+<!--													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">yousra@qaryb.com</a>-->
+<!--												</td>-->
 												<td style="padding: 0px">
 													<span style="margin-left: 5px;margin-right: 5px">•</span>
 												</td>
@@ -281,10 +281,10 @@
 													<img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54"
 													     height="14">
 												</td>
-												<td style="padding: 0px">
-													<span
-														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>
-												</td>
+<!--												<td style="padding: 0px">-->
+<!--													<span-->
+<!--														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0530134018</span>-->
+<!--												</td>-->
 												<td style="padding: 0px">
 													<span style="margin-left: 10px;margin-right: 10px">•</span>
 												</td>
