--- a/subscription/templates/inform_new_indexed_articles.html
+++ b/subscription/templates/inform_new_indexed_articles.html
@@ -9,10 +9,10 @@
     {% for article in articles %}
       <div>Nom boutique : </div>
       <div>{{article.offer.auth_shop.shop_name}}</div>
-      <a href="https://qaryb.com/shop/{{article.offer.auth_shop.qaryb_link}}">Lien boutique</a>
+      <a href="{{front_domain}}/shop/{{article.offer.auth_shop.qaryb_link}}">Lien boutique</a>
       <div>Titre d'article : </div>
       <div>{{ article.offer.title }}</div>
-      <a href="https://qaryb.com/shop/{{article.offer.auth_shop.qaryb_link}}/article/{{article.offer.pk}}">Lien d'article</a>
+      <a href="{{front_domain}}/shop/{{article.offer.auth_shop.qaryb_link}}/article/{{article.offer.pk}}">Lien d'article</a>
       <br>
     {% endfor %}
   </main>
