--- a/subscription/templates/inform_new_subscription.html
+++ b/subscription/templates/inform_new_subscription.html
@@ -8,6 +8,8 @@
   <main>
     <div>Nom boutique : </div>
     <div>{{shop_name}}</div>
+    <div>Abonnement (nombre des slots): </div>
+    <div>{{available_slots}}</div>
     <div>Lien : </div>
     <div>{{shop_link}}</div>
   </main>
