--- a/subscription/templates/inform_new_subscription.html
+++ b/subscription/templates/inform_new_subscription.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Nouvelle boutique Qaryb.</title>
+	<title>Nouvelle Abonnement Qaryb.</title>
 </head>
 <body>
   <main>
