--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,6 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 {% block branding %}
+{% if user.is_staff %}
 <div>
 	<ul class="object-tools" style="margin-top: 0">
 		<li>
@@ -18,4 +19,7 @@
 		</li>
 	</ul>
 </div>
+{% else %}
+	{{ block.super }}
+{% endif %}
 {% endblock %}
