fix - chat pagination - feat: action button index seo pages

--- a/account/templates/signature.html
+++ b/account/templates/signature.html
@@ -98,12 +98,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/qaryb.ma"
+												<a href="https://instagram.com/qaryb.officiel"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
 													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">qaryb.ma</span>
+													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>
 												</a>
 											</td>
 										</tr>
@@ -118,117 +118,117 @@
 	</tr>
 </table>
 <div style="margin-top: 60px;"></div>
-<table style="display: table;font-family: Arial, Helvetica, sans-serif;" cellspacing="0" cellpadding="0">
-	<tr>
-		<td>
-			<table style="display:inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
-				<tr>
+<!--<table style="display: table;font-family: Arial, Helvetica, sans-serif;" cellspacing="0" cellpadding="0">-->
+<!--	<tr>-->
+<!--		<td>-->
+<!--			<table style="display:inline-table;padding: 0px;" cellspacing="0" cellpadding="0">-->
+<!--				<tr>-->
+<!--&lt;!&ndash;					<td>&ndash;&gt;-->
+<!--&lt;!&ndash;						<img src="https://api.qaryb.com/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"&ndash;&gt;-->
+<!--&lt;!&ndash;						     style="width: 68px;height: 68px;">&ndash;&gt;-->
+<!--&lt;!&ndash;					</td>&ndash;&gt;-->
 <!--					<td>-->
-<!--						<img src="https://api.qaryb.com/static/mail/ichrak-elmissaoui.png" alt="Ichrak ELMISSAOUI"-->
-<!--						     style="width: 68px;height: 68px;">-->
-<!--					</td>-->
-					<td>
-						<div>
-							<h1 style="color: #0D070B;font-size: 16px;line-height: 10px;font-weight: 700;padding: 0;margin: 0;">
-								Ichrak ELMISSAOUI
-							</h1>
-							<h2 style="color: #84848A;font-size: 11px;font-weight: 400;line-height: 31px;padding: 0;margin: 0;">
-								Junior Digital Marketing Manager
-							</h2>
-							<table style="display: table; padding: 0px;" cellspacing="0" cellpadding="0">
-								<tr style="padding: 0px">
-									<td style="padding: 0px">
-										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">
-											<tr style="padding: 0px">
-												<td style="padding: 0px">
-													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0708178709</span>
-												</td>
+<!--						<div>-->
+<!--							<h1 style="color: #0D070B;font-size: 16px;line-height: 10px;font-weight: 700;padding: 0;margin: 0;">-->
+<!--								Ichrak ELMISSAOUI-->
+<!--							</h1>-->
+<!--							<h2 style="color: #84848A;font-size: 11px;font-weight: 400;line-height: 31px;padding: 0;margin: 0;">-->
+<!--								Junior Digital Marketing Manager-->
+<!--							</h2>-->
+<!--							<table style="display: table; padding: 0px;" cellspacing="0" cellpadding="0">-->
+<!--								<tr style="padding: 0px">-->
+<!--									<td style="padding: 0px">-->
+<!--										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">-->
+<!--											<tr style="padding: 0px">-->
+<!--												<td style="padding: 0px">-->
+<!--													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">0708178709</span>-->
+<!--												</td>-->
+<!--&lt;!&ndash;												<td style="padding: 0px">&ndash;&gt;-->
+<!--&lt;!&ndash;													<span style="margin-left: 5px;margin-right: 5px">•</span>&ndash;&gt;-->
+<!--&lt;!&ndash;												</td>&ndash;&gt;-->
+<!--&lt;!&ndash;												<td style="padding: 0px">&ndash;&gt;-->
+<!--&lt;!&ndash;													<a href="mailto:ichrak@qaryb.com"&ndash;&gt;-->
+<!--&lt;!&ndash;													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">ichrak@qaryb.com</a>&ndash;&gt;-->
+<!--&lt;!&ndash;												</td>&ndash;&gt;-->
 <!--												<td style="padding: 0px">-->
 <!--													<span style="margin-left: 5px;margin-right: 5px">•</span>-->
 <!--												</td>-->
 <!--												<td style="padding: 0px">-->
-<!--													<a href="mailto:ichrak@qaryb.com"-->
-<!--													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">ichrak@qaryb.com</a>-->
+<!--													<a href="https://qaryb.com"-->
+<!--													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">https://qaryb.com</a>-->
 <!--												</td>-->
-												<td style="padding: 0px">
-													<span style="margin-left: 5px;margin-right: 5px">•</span>
-												</td>
-												<td style="padding: 0px">
-													<a href="https://qaryb.com"
-													   style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B; text-decoration: none;">https://qaryb.com</a>
-												</td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-								<tr style="padding: 0px">
-									<td style="padding: 0px">
-										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">
-											<tr style="padding: 0px">
-												<td style="padding: 0px">
-													<img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54"
-													     height="14">
-												</td>
+<!--											</tr>-->
+<!--										</table>-->
+<!--									</td>-->
+<!--								</tr>-->
+<!--								<tr style="padding: 0px">-->
+<!--									<td style="padding: 0px">-->
+<!--										<table style="display: inline-table; padding: 0px" cellspacing="0" cellpadding="0">-->
+<!--											<tr style="padding: 0px">-->
 <!--												<td style="padding: 0px">-->
-<!--													<span-->
-<!--														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>-->
+<!--													<img src="https://api.qaryb.com/static/mail/qaryb-logo.png" alt="Qaryb logo" width="54"-->
+<!--													     height="14">-->
 <!--												</td>-->
-												<td style="padding: 0px">
-													<span style="margin-left: 10px;margin-right: 10px">•</span>
-												</td>
-												<td style="padding: 0px">
-													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">Mahaj Ryad Center B7 - Rabat</span>
-												</td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<table style="display: inline-table; padding: 0px;" cellspacing="0" cellpadding="0">
-							<tr style="padding: 0px">
-								<td style="padding: 0px;font-size: 13px;font-weight: 400;">
-									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
-										<tr style="padding: 0px" valign="middle">
-											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/imly.ma"
-												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
-													     width="20"
-													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">imly.ma</span>
-												</a>
-											</td>
-										</tr>
-									</table>
-								</td>
-								<td style="padding: 0px;font-size: 13px;font-weight: 400;">
-									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
-										<tr style="padding: 0px" valign="middle">
-											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/qaryb.ma"
-												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
-													     width="20"
-													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">qaryb.ma</span>
-												</a>
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-						</table>
-									</td>
-								</tr>
-							</table>
-						</div>
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-</table>
+<!--&lt;!&ndash;												<td style="padding: 0px">&ndash;&gt;-->
+<!--&lt;!&ndash;													<span&ndash;&gt;-->
+<!--&lt;!&ndash;														style="margin-left: 10px;font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">05 30 13 40 18</span>&ndash;&gt;-->
+<!--&lt;!&ndash;												</td>&ndash;&gt;-->
+<!--												<td style="padding: 0px">-->
+<!--													<span style="margin-left: 10px;margin-right: 10px">•</span>-->
+<!--												</td>-->
+<!--												<td style="padding: 0px">-->
+<!--													<span style="font-size: 13px;font-weight: 400;line-height: 31px;color: #0D070B;">Mahaj Ryad Center B7 - Rabat</span>-->
+<!--												</td>-->
+<!--											</tr>-->
+<!--										</table>-->
+<!--									</td>-->
+<!--								</tr>-->
+<!--								<tr>-->
+<!--									<td>-->
+<!--										<table style="display: inline-table; padding: 0px;" cellspacing="0" cellpadding="0">-->
+<!--							<tr style="padding: 0px">-->
+<!--								<td style="padding: 0px;font-size: 13px;font-weight: 400;">-->
+<!--									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">-->
+<!--										<tr style="padding: 0px" valign="middle">-->
+<!--											<td style="padding: 0px" valign="middle">-->
+<!--												<a href="https://instagram.com/imly.ma"-->
+<!--												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">-->
+<!--													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"-->
+<!--													     width="20"-->
+<!--													     height="20">-->
+<!--													<span style="line-height: 31px;margin-left: 5px;">imly.ma</span>-->
+<!--												</a>-->
+<!--											</td>-->
+<!--										</tr>-->
+<!--									</table>-->
+<!--								</td>-->
+<!--								<td style="padding: 0px;font-size: 13px;font-weight: 400;">-->
+<!--									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">-->
+<!--										<tr style="padding: 0px" valign="middle">-->
+<!--											<td style="padding: 0px" valign="middle">-->
+<!--												<a href="https://instagram.com/qaryb.officiel"-->
+<!--												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">-->
+<!--													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"-->
+<!--													     width="20"-->
+<!--													     height="20">-->
+<!--													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>-->
+<!--												</a>-->
+<!--											</td>-->
+<!--										</tr>-->
+<!--									</table>-->
+<!--								</td>-->
+<!--							</tr>-->
+<!--						</table>-->
+<!--									</td>-->
+<!--								</tr>-->
+<!--							</table>-->
+<!--						</div>-->
+<!--					</td>-->
+<!--				</tr>-->
+<!--			</table>-->
+<!--		</td>-->
+<!--	</tr>-->
+<!--</table>-->
 <div style="margin-top: 60px;"></div>
 <table style="display: table;font-family: Arial, Helvetica, sans-serif;" cellspacing="0" cellpadding="0">
 	<tr>
@@ -318,12 +318,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/qaryb.ma"
+												<a href="https://instagram.com/qaryb.officiel"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
 													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">qaryb.ma</span>
+													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>
 												</a>
 											</td>
 										</tr>
