fixed - blog details endpoint

--- a/account/templates/signature.html
+++ b/account/templates/signature.html
@@ -83,12 +83,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/imly.ma"
+												<a href="https://facebook.com/qaryb.officiel"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
+													<img src="https://api.qaryb.com/static/mail/facebook-icon.png" alt="Qaryb.officiel facebook page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">imly.ma</span>
+													<span style="line-height: 31px;margin-left: 5px;">Qaryb.officiel</span>
 												</a>
 											</td>
 										</tr>
@@ -98,12 +98,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/qaryb.officiel"
+												<a href="https://instagram.com/qaryb.maroc"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
+													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Qaryb.maroc instagram page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>
+													<span style="line-height: 31px;margin-left: 5px;">Qaryb.maroc</span>
 												</a>
 											</td>
 										</tr>
@@ -206,12 +206,12 @@
 <!--									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">-->
 <!--										<tr style="padding: 0px" valign="middle">-->
 <!--											<td style="padding: 0px" valign="middle">-->
-<!--												<a href="https://instagram.com/qaryb.officiel"-->
+<!--												<a href="https://instagram.com/qaryb.maroc"-->
 <!--												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">-->
 <!--													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"-->
 <!--													     width="20"-->
 <!--													     height="20">-->
-<!--													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>-->
+<!--													<span style="line-height: 31px;margin-left: 5px;">qaryb.maroc</span>-->
 <!--												</a>-->
 <!--											</td>-->
 <!--										</tr>-->
@@ -303,12 +303,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/imly.ma"
+												<a href="https://facebook.com/qaryb.officiel"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
+													<img src="https://api.qaryb.com/static/mail/facebook-icon.png" alt="Qaryb.officiel facebook page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">imly.ma</span>
+													<span style="line-height: 31px;margin-left: 5px;">Qaryb.officiel</span>
 												</a>
 											</td>
 										</tr>
@@ -318,12 +318,12 @@
 									<table style="display: inline-table;padding: 0px;" cellspacing="0" cellpadding="0">
 										<tr style="padding: 0px" valign="middle">
 											<td style="padding: 0px" valign="middle">
-												<a href="https://instagram.com/qaryb.officiel"
+												<a href="https://instagram.com/qaryb.maroc"
 												   style="color: #0D070B; text-decoration: none;margin-right: 10px;">
-													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Imly instagram page"
+													<img src="https://api.qaryb.com/static/mail/instagram-icon.png" alt="Qaryb.maroc instagram page"
 													     width="20"
 													     height="20">
-													<span style="line-height: 31px;margin-left: 5px;">qaryb.officiel</span>
+													<span style="line-height: 31px;margin-left: 5px;">Qaryb.maroc</span>
 												</a>
 											</td>
 										</tr>
